@@ -1,7 +1,8 @@
 2.1.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- new quality report - operator [amleczko]
+- fix problem with js select in teken listing [amleczko]
 
 
 2.1.5 (2014-01-09)
